--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,7 @@ eframe = "*"
 egui = "*"
 egui_file = "*"
 egui_commonmark = "*"
-reqwest = { version = "0.12", features = ["json"] }
+reqwest = { version = "0.12", features = ["json", "blocking"] }
 tokio = { version = "1", features = ["full"] }
 serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
+rodio = "*"
