--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,3 +12,8 @@ reqwest = { version = "0.12", features = ["json", "blocking"] }
 tokio = { version = "1", features = ["full"] }
 serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
 rodio = "*"
+scraper = "0.24.0"
+url = "2.5.7"
+urlencoding = "2.1.3"
+spider = "2.37.153"
+rand = "0.9.2"
